--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "jscodeshift": "jscodeshift -t ./src/examples/reverse-identifiers.transform.ts --extensions=ts src/examples/reverse-identifiers.input.ts --print --dry",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
