--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "25.1.4",
     "@types/jscodeshift": "0.6.3",
     "jest": "25.1.0",
-    "jscodeshift": "0.7.0"
+    "jscodeshift": "0.7.0",
+    "prettier": "1.19.1"
   }
 }
