--- a/package.json
+++ b/package.json
@@ -13,8 +13,21 @@
   "devDependencies": {
     "@types/jest": "25.1.4",
     "@types/jscodeshift": "0.6.3",
+    "husky": "4.2.3",
     "jest": "25.1.0",
     "jscodeshift": "0.7.0",
+    "lint-staged": "10.0.8",
     "prettier": "1.19.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,css,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
