chore: add npm scripts for prettier

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "jscodeshift": "jscodeshift -t ./src/examples/reverse-identifiers.transform.ts --extensions=ts src/examples/reverse-identifiers.input.ts --print --dry",
+    "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
+    "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
