--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "@types/jest": "25.1.4",
     "@types/jscodeshift": "0.6.3",
+    "@typescript-eslint/eslint-plugin": "2.23.0",
+    "@typescript-eslint/parser": "2.23.0",
+    "eslint": "6.8.0",
     "husky": "4.2.3",
     "jest": "25.1.0",
     "jscodeshift": "0.7.0",
