--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jest": "25.1.0",
     "jscodeshift": "0.7.0",
     "lint-staged": "10.0.8",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "typescript": "3.8.3"
   },
   "husky": {
     "hooks": {
