--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jscodeshift": "0.7.0",
     "lint-staged": "10.0.8",
     "prettier": "1.19.1",
+    "ts-jest": "25.2.1",
     "typescript": "3.8.3"
   },
   "husky": {
