chore: remove 'git add' from lint-staged config due to v10 changes
Ref: https://github.com/okonet/lint-staged#v10

--- a/package.json
+++ b/package.json
@@ -38,12 +38,10 @@
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.ts": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
