--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --ext ts",
     "lint:fix": "eslint --fix **/*.ts",
     "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
-    "jscodeshift": "jscodeshift -t ./src/examples/reverse-identifiers.transform.ts --extensions=ts src/examples/reverse-identifiers/reverse-identifiers.input.ts --print --dry",
+    "jscodeshift:reverse-identifiers": "jscodeshift -t ./src/examples/reverse-identifiers/reverse-identifiers.ts --extensions=ts src/examples/reverse-identifiers/reverse-identifiers.input.ts --print --dry",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
     "test": "jest"
