--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint --fix **/*.ts",
     "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
     "jscodeshift:reverse-identifiers": "jscodeshift -t ./src/examples/reverse-identifiers/reverse-identifiers.ts --extensions=ts src/examples/reverse-identifiers/reverse-identifiers.input.ts --print --dry",
+    "jscodeshift:append-function-call": "jscodeshift -t ./src/examples/append-function-call/append-function-call.ts --extensions=ts src/examples/append-function-call/__testfixtures__/append-function-call.input.ts --print --dry --functionNameToCall=test --comment=abc",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
     "test": "jest"
