--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
     "jscodeshift:reverse-identifiers": "jscodeshift -t ./src/examples/reverse-identifiers/reverse-identifiers.ts --extensions=ts src/examples/reverse-identifiers/reverse-identifiers.input.ts --print --dry",
     "jscodeshift:append-function-call": "jscodeshift -t ./src/examples/append-function-call/append-function-call.ts --extensions=ts src/examples/append-function-call/__testfixtures__/append-function-call.input.ts --print --dry --functionNameToCall=test --comment=abc",
+    "preinstall": "node ./tools/node/check-node-version.js && node ./tools/npm/check-npm.js",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
     "test": "jest"
@@ -16,6 +17,9 @@
   "keywords": [],
   "author": "Cheong Yip <wingy3181@gmail.com> (https://wingcheongyip.com/)",
   "license": "MIT",
+  "engines": {
+    "node": "^12.0.0"
+  },
   "devDependencies": {
     "@types/jest": "25.1.4",
     "@types/jscodeshift": "0.7.0",
@@ -30,6 +34,7 @@
     "jscodeshift": "0.7.0",
     "lint-staged": "10.0.8",
     "prettier": "1.19.1",
+    "semver": "7.1.3",
     "ts-jest": "25.2.1",
     "typescript": "3.8.3"
   },
