--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "lint": "eslint . --ext ts",
     "lint:fix": "eslint --fix **/*.ts",
     "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
-    "jscodeshift:reverse-identifiers": "jscodeshift -t ./src/examples/reverse-identifiers/reverse-identifiers.ts --extensions=ts src/examples/reverse-identifiers/reverse-identifiers.input.ts --print --dry",
-    "jscodeshift:append-function-call": "jscodeshift -t ./src/examples/append-function-call/append-function-call.ts --extensions=ts src/examples/append-function-call/__testfixtures__/append-function-call.input.ts --print --dry --functionNameToCall=test --comment=abc",
     "preinstall": "node ./tools/node/check-node-version.js && node ./tools/npm/check-npm.js",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
+    "start": "ts-node scripts/run-jscodeshift-transforms.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -24,6 +23,7 @@
     "node": "^12.0.0"
   },
   "devDependencies": {
+    "@types/inquirer": "6.5.0",
     "@types/jest": "25.1.4",
     "@types/jscodeshift": "0.7.0",
     "@types/node": "13.9.2",
@@ -33,12 +33,14 @@
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
     "husky": "4.2.3",
+    "inquirer": "7.1.0",
     "jest": "25.1.0",
     "jscodeshift": "0.7.0",
     "lint-staged": "10.0.8",
     "prettier": "1.19.1",
     "semver": "7.1.3",
     "ts-jest": "25.2.1",
+    "ts-node": "8.7.0",
     "typescript": "3.8.3"
   },
   "husky": {
