--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - run: npm run audit
       - run: npm ci
       - run: npm run lint --if-present
       - run: npm run build --if-present
       - run: npm test
         env:
           CI: true
+      - name: Archive npm audit results
+        if: always()
+        uses: actions/upload-artifact@v1
+        with:
+          name: npm-audit-report
+          path: reports/audit/index.html
