chore: add typescript type checking
Attempted to use eslint typed linting as per documentation at
https://github.com/typescript-eslint/typescript-eslint/blob/master/docs/getting-started/linting/TYPED_LINTING.md
but doesn't work.
Firstly, it complains about missing parserOptions.project configuration
even though it is there in `.eslintrc.js`
Secondly, even though I pass it as an option via the eslint CLI
(--parser-options=project:./tsconfig.json), then there it doesn't
complain about type errors.

So insteading using tsc with noEmit option to check types.

Refs:
- https://stackoverflow.com/questions/60514929/eslint-not-reporting-typescript-compiler-type-checking-errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noEmit": true
   },
   "exclude": ["src/**/__testfixtures__/*"]
 }
