--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "scripts": {
     "audit": "npm audit --json | npx npm-audit-html --output reports/audit/index.html && npm audit --audit-level=high",
-    "lint": "eslint . --ext ts",
-    "lint:fix": "eslint --fix **/*.ts",
-    "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
+    "lint": "npm run type:check && npm run eslint",
+    "type:check": "tsc --noEmit",
+    "eslint": "eslint . --ext ts",
+    "eslint:check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
+    "eslint:fix": "eslint --fix **/*.ts",
     "preinstall": "node ./tools/node/check-node-version.js && node ./tools/npm/check-npm.js",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
