chore: move node-version check to postinstall due to semver dependency

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint": "eslint . --ext ts",
     "eslint:check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
     "eslint:fix": "eslint --fix **/*.ts",
-    "preinstall": "node ./tools/node/check-node-version.js && node ./tools/npm/check-npm.js",
+    "postinstall": "node ./tools/node/check-node-version.js",
+    "preinstall": "node ./tools/npm/check-npm.js",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
     "start": "ts-node scripts/run-jscodeshift-transforms.ts",
