--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
     "prettier:write": "prettier --write **/*.{js,ts,css,json,md}",
     "start": "ts-node scripts/run-jscodeshift-transforms.ts",
-    "test": "jest --coverage",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "keywords": [],
