feat: add jest config to run lint + tests together via jest platform with projects property
Create a separate jest config as I don't want to run linting twice
during the CI build

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eslint": "eslint . --ext ts",
     "eslint:check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
     "eslint:fix": "eslint --fix **/*.ts",
+    "jest:projects": "jest --config=jest.config.projects.js",
+    "jest:projects:watch": "npm run jest:projects -- --watch",
     "postinstall": "node ./tools/node/check-node-version.js",
     "preinstall": "node ./tools/npm/check-npm.js",
     "prettier:check": "prettier --check **/*.{js,ts,css,json,md}",
@@ -42,6 +44,7 @@
     "inquirer": "7.1.0",
     "jest": "25.1.0",
     "jest-html-reporters": "1.2.1",
+    "jest-runner-eslint": "0.7.6",
     "jest-stare": "1.26.0",
     "jscodeshift": "0.7.0",
     "lint-staged": "10.0.8",
